--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,6 +38,10 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
+    role_hierarchy:
+        ROLE_MANAGER: ROLE_MANAGER
+        ROLE_ADMIN: ROLE_ADMIN
+
 when@test:
     security:
         password_hashers:
