--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "sweetalert2": "^11.4.8",
         "yarn": "^1.22.18"
     }
 }
