--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "boostrap": "^2.0.0",
         "bootstrap": "^5.1.3",
         "core-js": "^3.0.0",
+        "css-minimizer-webpack-plugin": "^3.4.1",
+        "html-minimizer-webpack-plugin": "^3.5.0",
         "jquery": "^3.6.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.50.0",
