--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.8.1",
         "sweetalert2": "^11.4.8",
         "yarn": "^1.22.18"
     }
