--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,13 +1,12 @@
 vich_uploader:
     db_driver: orm
+    metadata:
+        type: attribute
 
     mappings:
-        images:
-            uri_prefix: /images/
-            upload_destination: '%kernel.project_dir%/public/images/'
-            inject_on_load: false
-            delete_on_update: true
-            delete_on_remove: true
+        suite_images:
+            uri_prefix: '/images'
+            upload_destination: '%kernel.project_dir%/public/images'
 
     #mappings:
     #    products:
