--- a/.env
+++ b/.env
@@ -27,8 +27,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:password@127.0.0.1:3306/studi?serverVersion=mariadb-10.8.2&charset=utf8mb4"
+# DATABASE_URL="mysql://root:password@127.0.0.1:3306/studi?serverVersion=mariadb-10.8.2&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://bcb56c2d0faf0d:4fb0cb8d@eu-cdbr-west-02.cleardb.net/heroku_c5444425cd64b09?reconnect=true"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
