--- a/composer.json
+++ b/composer.json
@@ -92,6 +92,7 @@
             "@auto-scripts"
         ],
         "compile": [
+            "php bin/console doctrine:migrations:diff",
             "php bin/console doctrine:migrations:migrate"
         ]
     },
