--- a/composer.json
+++ b/composer.json
@@ -93,8 +93,8 @@
             "@auto-scripts"
         ],
         "compile": [
-            "php bin/console doctrine:migrations:diff",
-            "php bin/console doctrine:migrations:migrate"
+            "php bin/console doctrine:migrations:diff --allow-empty-diff",
+            "php bin/console doctrine:migrations:migrate --allow-no-migration"
         ]
     },
     "conflict": {
